@@ -1333,6 +1333,11 @@ The converse of this statement is a trivial application of <acroref type="theore
 </solution>
 </exercise>
 
+<exercise type="T" number="12" rough="Reprise Hermitian inner product theorem">
+<problem contributor="robertbeezer">The conclusion of <acroref type="theorem" acro="HMIP" /> is $\innerproduct{A\vect{x}}{\vect{y}}=\innerproduct{\vect{x}}{\adjoint{A}\vect{y}}$.  Use the same hypotheses, and prove the similar conclusion: $\innerproduct{\vect{x}}{A\vect{y}}=\innerproduct{\adjoint{A}\vect{x}}{\vect{y}}$.  Two different approaches can be based on an application of <acroref type="theorem" acro="HMIP" />.  The first uses <acroref type="theorem" acro="AA" />, while a second uses <acroref type="theorem" acro="IPAC" />.  Can you provide two proofs?
+</problem>
+</exercise>
+
 <exercise type="T" number="20" rough="Theorem MMZM, part (2)">
 <problem contributor="robertbeezer">Prove the second part of <acroref type="theorem" acro="MMZM" />.
 </problem>
