@@ -1,5 +1,6 @@
 v3.01 2013/xx/xx
 ~~~~~~~~~~~~~~~~
+New:  Exercise MM.T12, Theorem HMIP reprised
 Change:  Proof of Theorem OD uses normality of diagonal matrices (Hunter Wills)
 
 v3.00 2012/12/05
